<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewEnd"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/background_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryLightColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/txt_infix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/clear"
        android:textColor="@color/redColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_postfix" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/nine"
        android:text="@string/nine"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_six"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintStart_toEndOf="@id/btn_eight"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/eight"
        android:text="@string/eight"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_five"
        app:layout_constraintEnd_toStartOf="@id/btn_nine"
        app:layout_constraintStart_toEndOf="@id/btn_seven"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />


    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/seven"
        android:text="@string/seven"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_four"
        app:layout_constraintEnd_toStartOf="@id/btn_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/divide"
        android:text="@string/divide"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_nine"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/four"
        android:text="@string/four"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_one"
        app:layout_constraintEnd_toStartOf="@id/btn_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_seven"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/five"
        android:text="@string/five"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toStartOf="@id/btn_six"
        app:layout_constraintStart_toEndOf="@id/btn_four"
        app:layout_constraintTop_toBottomOf="@id/btn_eight"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/six"
        android:text="@string/six"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_three"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        app:layout_constraintTop_toBottomOf="@id/btn_nine"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/multiply"
        android:text="@string/multiply"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_subtracts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_six"
        app:layout_constraintTop_toBottomOf="@id/btn_divide"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/one"
        android:text="@string/one"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_zero"
        app:layout_constraintEnd_toStartOf="@id/btn_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_four" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/two"
        android:text="@string/two"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_leftparenthesis"
        app:layout_constraintEnd_toStartOf="@id/btn_three"
        app:layout_constraintStart_toEndOf="@id/btn_one"
        app:layout_constraintTop_toBottomOf="@id/btn_five"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/three"
        android:text="@string/three"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_rightparenthesis"
        app:layout_constraintEnd_toStartOf="@id/btn_subtracts"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        app:layout_constraintTop_toBottomOf="@id/btn_six"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_subtracts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/subtracts"
        android:text="@string/subtracts"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_three"
        app:layout_constraintTop_toBottomOf="@id/btn_multiply"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/zero"
        android:text="@string/zero"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_equals"
        app:layout_constraintEnd_toStartOf="@+id/btn_leftparenthesis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_leftparenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/leftparenthesis"
        android:text="@string/leftparenthesis"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_equals"
        app:layout_constraintEnd_toStartOf="@id/btn_rightparenthesis"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
        app:layout_constraintTop_toBottomOf="@id/btn_two"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_rightparenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/rightparenthesis"
        android:text="@string/rightparenthesis"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_equals"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_leftparenthesis"
        app:layout_constraintTop_toBottomOf="@id/btn_three"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/add"
        android:text="@string/add"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_rightparenthesis"
        app:layout_constraintTop_toBottomOf="@id/btn_subtracts"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/equals"
        android:textColor="@color/secondaryTextColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_infix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/txt_postfix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_result" />

    <TextView
        android:id="@+id/txt_postfix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_infix" />


</androidx.constraintlayout.widget.ConstraintLayout>